# btree-store

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  benchmark.md  ffi.md
.github/workflows/: ci.yml
benches/: btree_bench.rs
docs/: design.md
examples/: ffi.c
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: bucket_lifecycle.rs  common.rs  concurrent_snapshot_model.rs  kv_model.rs  multi_bucket_model.rs  reopen_compact_model.rs
include/: btree_store.h
scripts/: fuzz_regression.sh
src/: ffi.rs  lib.rs  node.rs  page_store.rs  store.rs
tests/: bench.rs  btree_tests.rs  compaction_tests.rs  complex_leak_tests.rs  concurrency_tests.rs  crash_safety_tests.rs  cross_instance_test.rs  data_corruption.rs  delete_merge_tests.rs  isolation_tests.rs  iterator_tests.rs  leak_safety_tests.rs  mace_repro.rs  mace_snapshot_regression.rs  multi_bucket_tests.rs  open_reuse_tests.rs  refresh_usage_test.rs  smo_stress_test.rs  super_large_value_test.rs
